
* Add win32pdh.AddEnglishCounter (rupole via feature request #3529527)

* Fix post_install script use of the registry (rupole via bug #3536122)

* Python 3.3 version is built with VS2010.

* win32com.shell - added function SHCreateStreamOnFileEx and
	interfaces IShellItem2, IEnumShellItems, IApplicationDocumentLists,
	IApplicationDestinations, ITaskbarList, IEnumObjects,
	IKnownFolder, and IKnownFolderManager

* win32com.propsys - Many Property System interfaces and functions added

* pythoncom - added StgCreateStorageEx

* win32com.client - 
	Fix iteration of objects that don't declare an enumerator in their typelib
	Validate syntax of constants written to makepy generated files

* win32file - Add GetFileInformationByHandleEx

* win32api - Allow UpdateResource to remove a resource

Since build 216:
----------------
* ISAPI extension works with Python 3.x

* Python service module will now have their directory added to the start
  of sys.path rather than the end to avoid cryptic error messages if a
  module of the same name is already on the path (rvolpe via #3194663)

* Various Pythonwin autocomplete enhancements (kxroberto via #3468282 and
  Oliver Tengler via #3433953)

* The Pythonwin editor now remembers previous searches made in this session.
  (patch #3468280 from kxroberto).
  
* The LOGFONT struct implementation (win32util) was extended to support the
  full LOGFONT struct as published by Microsoft.  This includes changes to
  win32util.LogFontToDict and win32util.DictToLogFont.  (Feature request
  3433757 by Kris Hardy)

* Remove some duplicated menu code from pythonwin which should avoid
  having py2exe pulling in most of the pythonwin framework in some cases
  (patch 3433527 from kxroberto.)

* A new win32com.client.VARIANT object can be used for advanced control over
  the parameter types passed to some COM methods.  See the documentation in
  win32com/HTML/variant.html (also included in the help file)
